--- a/debug.html
+++ b/debug.html
@@ -34,12 +34,12 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/modules/">Modules</a></li>
-        <li><a href="/outcomes/">Outcomes</a></li>
-        <li><a href="/readings/">Readings</a></li>
-        <li><a href="/experiences/">Experiences</a></li>
-        <li><a href="/assessments/">Assessments</a></li>
+        <li><a href="/basic-template/index.html">Home</a></li>
+        <li><a href="/basic-template/modules/">Modules</a></li>
+        <li><a href="/basic-template/outcomes/">Outcomes</a></li>
+        <li><a href="/basic-template/readings/">Readings</a></li>
+        <li><a href="/basic-template/experiences/">Experiences</a></li>
+        <li><a href="/basic-template/assessments/">Assessments</a></li>
         
       </ul>
     </div>
@@ -150,7 +150,7 @@
    "reading2"=>#Jekyll:Page @name="reading-2.md",
    "reading3"=>#Jekyll:Page @name="reading-3.md",
    "reading4"=>#Jekyll:Page @name="reading-4.md"},
- "time"=>2014-03-12 07:46:14 -1000,
+ "time"=>2014-03-12 11:51:38 -1000,
  "posts"=>[#Jekyll:Post @id="/jekyll/update/2014/01/14/welcome-to-jekyll"],
  "pages"=>
   [#Jekyll:Page @name="index.md",
