--- a/data/reading-1.html
+++ b/data/reading-1.html
@@ -34,12 +34,12 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/modules/">Modules</a></li>
-        <li><a href="/outcomes/">Outcomes</a></li>
-        <li><a href="/readings/">Readings</a></li>
-        <li><a href="/experiences/">Experiences</a></li>
-        <li><a href="/assessments/">Assessments</a></li>
+        <li><a href="/basic-template/index.html">Home</a></li>
+        <li><a href="/basic-template/modules/">Modules</a></li>
+        <li><a href="/basic-template/outcomes/">Outcomes</a></li>
+        <li><a href="/basic-template/readings/">Readings</a></li>
+        <li><a href="/basic-template/experiences/">Experiences</a></li>
+        <li><a href="/basic-template/assessments/">Assessments</a></li>
         
       </ul>
     </div>
