--- a/modules/module1/index.html
+++ b/modules/module1/index.html
@@ -79,7 +79,7 @@
         
         <div class="col-sm-3">
           <div class="thumbnail">
-            <h4><a href="/_morea_dir/readings/reading1.html">An overview of Foos</a></h4>
+            <h4><a href="/morea/data/reading-1.html">An overview of Foos</a></h4>
             <p>The first reading.</p>
 
           </div>
@@ -108,7 +108,7 @@
         
         <div class="col-sm-3">
           <div class="thumbnail">
-            <h4><a href="/_morea_dir/experiences/experience1.html">Experience the Foo</a></h4>
+            <h4><a href="/morea/data/experience-1.html">Experience the Foo</a></h4>
             <p>The first experiential learning event.</p>
 
           </div>
