--- a/morea/data/reading-4.html
+++ b/morea/data/reading-4.html
@@ -41,6 +41,8 @@
         <li><a href="/basic-template/experiences/">Experiences</a></li>
         <li><a href="/basic-template/assessments/">Assessments</a></li>
         
+        <li><a href="/basic-template/debug.html">Debug</a></li>
+        
       </ul>
     </div>
   </div>
