--- a/morea/data/2.examples/reading-notes-2.html
+++ b/morea/data/2.examples/reading-notes-2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Home | ICS 311 Spring 2014 </title>
+  <title> Chapter 2 Notes | ICS 311 Spring 2014 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.0/cerulean/bootstrap.min.css">
@@ -49,19 +49,7 @@
 
 
 <div class="container">
-  <p><h2>Welcome to ICS 311, Spring 2014</h2></p>
-
-<p>This is preliminary version of a Morea course website for ICS 311 Algorithms, taught Spring 2014 by Dan Suthers.</p>
-
-<p><strong>If you are an ICS 311 student, do not use this site.</strong>  Instead, refer to the <a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/index.html">real site</a>.</p>
-
-<p>Generally the course is run within <a href="https://laulima.hawaii.edu/portal/site/MAN.82792.201430">Laulima</a>. Notes and other material are posted on this site,
-<a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/">http://www2.hawaii.edu/~suthers/courses/ics311s14/</a>,
-and on YouTube. However, course participants
-will need to log into Laulima regularly to watch screencasts, take quizzes, submit assignments, and
-to use other facilities such as discussions and the mail tool as needed. Classes are in
-<a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/map.jpg">Webster 101</a>.</p>
-
+  
 </div>
 
 
