--- a/morea/data/home.html
+++ b/morea/data/home.html
@@ -1,3 +1,12 @@
-<h2>Welcome to the Basic Template</h2>
+<h2>Welcome to ICS 311, Spring 2014</h2>
 
-<p>This is the basic template content. You can find it in the home.md file.</p>
+<p>This is preliminary version of a Morea course website for ICS 311 Algorithms, taught Spring 2014 by Dan Suthers.</p>
+
+<p><strong>If you are an ICS 311 student, do not use this site.</strong>  Instead, refer to the <a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/index.html">real site</a>.</p>
+
+<p>Generally the course is run within <a href="https://laulima.hawaii.edu/portal/site/MAN.82792.201430">Laulima</a>. Notes and other material are posted on this site,
+<a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/">http://www2.hawaii.edu/~suthers/courses/ics311s14/</a>,
+and on YouTube. However, course participants
+will need to log into Laulima regularly to watch screencasts, take quizzes, submit assignments, and
+to use other facilities such as discussions and the mail tool as needed. Classes are in
+<a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/map.jpg">Webster 101</a>.</p>
