Fixing the darn links.

--- a/modules/intro/index.html
+++ b/modules/intro/index.html
@@ -170,7 +170,7 @@
         
         <div class="col-sm-3">
           <div class="thumbnail">
-            <h4><a href="/ics311s14http://mitpress.mit.edu/books/introduction-algorithms">CLRS 1 - Role of algorithms</a></h4>
+            <h4><a href="http://mitpress.mit.edu/books/introduction-algorithms">CLRS 1 - Role of algorithms</a></h4>
             <p>The role of algorithms in computing</p>
 
             <p>
