--- a/morea/data/5.probabilistic-analysis/reading-screencast-5a.html
+++ b/morea/data/5.probabilistic-analysis/reading-screencast-5a.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Home | ICS 311 Spring 2014 </title>
+  <title> Indicator random variables | ICS 311 Spring 2014 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.0/cerulean/bootstrap.min.css">
@@ -49,22 +49,7 @@
 
 
 <div class="container">
-  <p><h2>Welcome to ICS 311, Spring 2014</h2></p>
-
-<p><strong>If you are an ICS 311, Spring 2014 student, do not use this site.</strong>  Instead, refer to the <a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/index.html">real site</a>.</p>
-
-<p>This is a subset of the course material for ICS 311 Algorithms, Spring 2014, created to illustrate the use of the 
-Morea Framework.</p>
-
-<p>Generally the course is run within
-<a href="https://laulima.hawaii.edu/portal/site/MAN.82792.201430">Laulima</a>. Notes
-and other material are posted on this site.  However, course
-participants will need to log into Laulima regularly to watch
-screencasts, take quizzes, submit assignments, and to use other
-facilities such as discussions and the mail tool as needed. </p>
-
-<p>Classes are in <a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/map.jpg">Webster 101</a>.</p>
-
+  
 </div>
 
 
