--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -117,6 +117,19 @@
   </div>
 </div>
 
+<div class="white-background">
+  <div class="container">
+    <h2><small>Outcome:</small> Understand probabilistic analysis.</h2>
+    <p>Understand when and how to analyze an algorithm based on a distribution of the probability of each case.</p>
+
+    <p>
+    <em>Referencing modules:</em>
+    
+      <a href="../modules/probabilistic">Probabilistic Analysis and Randomized Algorithms</a>
+    
+  </div>
+</div>
+
 
 
 
