--- a/morea/data/home.html
+++ b/morea/data/home.html
@@ -1,12 +1,15 @@
 <h2>Welcome to ICS 311, Spring 2014</h2>
 
-<p>This is preliminary version of a Morea course website for ICS 311 Algorithms, taught Spring 2014 by Dan Suthers.</p>
+<p><strong>If you are an ICS 311, Spring 2014 student, do not use this site.</strong>  Instead, refer to the <a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/index.html">real site</a>.</p>
 
-<p><strong>If you are an ICS 311 student, do not use this site.</strong>  Instead, refer to the <a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/index.html">real site</a>.</p>
+<p>This is a subset of the course material for ICS 311 Algorithms, Spring 2014, created to illustrate the use of the 
+Morea Framework.</p>
 
-<p>Generally the course is run within <a href="https://laulima.hawaii.edu/portal/site/MAN.82792.201430">Laulima</a>. Notes and other material are posted on this site,
-<a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/">http://www2.hawaii.edu/~suthers/courses/ics311s14/</a>,
-and on YouTube. However, course participants
-will need to log into Laulima regularly to watch screencasts, take quizzes, submit assignments, and
-to use other facilities such as discussions and the mail tool as needed. Classes are in
-<a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/map.jpg">Webster 101</a>.</p>
+<p>Generally the course is run within
+<a href="https://laulima.hawaii.edu/portal/site/MAN.82792.201430">Laulima</a>. Notes
+and other material are posted on this site.  However, course
+participants will need to log into Laulima regularly to watch
+screencasts, take quizzes, submit assignments, and to use other
+facilities such as discussions and the mail tool as needed. </p>
+
+<p>Classes are in <a href="http://www2.hawaii.edu/%7Esuthers/courses/ics311s14/map.jpg">Webster 101</a>.</p>
