--- a/morea/data/6.hash-tables/reading-screencast-6c.html
+++ b/morea/data/6.hash-tables/reading-screencast-6c.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Experience the Bar | ICS 311 Spring 2014 </title>
+  <title> Hash tables: Hash functions | ICS 311 Spring 2014 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.0/cerulean/bootstrap.min.css">
@@ -49,10 +49,7 @@
 
 
 <div class="container">
-  <h3>Experiential Learning 2</h3>
-
-<p>An experiential learning opportunity.</p>
-
+  
 </div>
 
 
@@ -65,7 +62,8 @@
 suthers@hawaii.edu</p>
 
     
-    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a></p>
+    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a><br>
+       Last update on: <span>2014-03-18 14:28:18 -1000</span></p>
   </div>
 </footer>
 </div>
