--- a/morea/data/1.introduction/reading-policies.html
+++ b/morea/data/1.introduction/reading-policies.html
@@ -172,7 +172,8 @@ synchronization to my server after each major piece of work.</p>
 suthers@hawaii.edu</p>
 
     
-    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a></p>
+    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a><br>
+       Last update on: <span>2014-03-18 14:28:18 -1000</span></p>
   </div>
 </footer>
 </div>
