--- a/morea/data/2.examples/experience-2.html
+++ b/morea/data/2.examples/experience-2.html
@@ -92,7 +92,8 @@ decide the best cutoff for a given implementation.)</p>
 suthers@hawaii.edu</p>
 
     
-    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a></p>
+    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a><br>
+       Last update on: <span>2014-03-18 14:28:18 -1000</span></p>
   </div>
 </footer>
 </div>
