--- a/morea/data/2.examples/experience-3.html
+++ b/morea/data/2.examples/experience-3.html
@@ -117,7 +117,8 @@ submit as jpg or pdf. Alternatively, use a drawing program.</p>
 suthers@hawaii.edu</p>
 
     
-    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a></p>
+    <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a><br>
+       Last update on: <span>2014-03-18 14:28:18 -1000</span></p>
   </div>
 </footer>
 </div>
