--- a/morea/data/6.hash-tables/experience-deletion.html
+++ b/morea/data/6.hash-tables/experience-deletion.html
@@ -83,7 +83,7 @@ book&#39;s pseudocode (shown).</p>
 
 <h3>Deletion from Skip Lists</h3>
 
-<p><img src="/morea/data/6.hash-tables/SkipList-Small.jpg" alt=""></p>
+<p><img src="morea/data/6.hash-tables/SkipList-Small.jpg" alt=""></p>
 
 <p><code>SkipSearch(k)</code> returns a pointer <code>p</code> to the bottom most element of the tower
 you want to delete. Suppose this were passed to a method <code>SkipDelete(p)</code> −
@@ -126,7 +126,7 @@ suthers@hawaii.edu</p>
 
     
     <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a><br>
-       Last update on: <span>2014-03-18 14:28:53 -1000</span></p>
+       Last update on: <span>2014-03-18 14:32:58 -1000</span></p>
   </div>
 </footer>
 </div>
