Still trying to fix image links.

--- a/morea/data/6.hash-tables/experience-data-structures-homework.html
+++ b/morea/data/6.hash-tables/experience-data-structures-homework.html
@@ -82,7 +82,7 @@ to show the data associated with the keys. The double lines in the graphic are
 meant to remind you that these are doubly linked lists in both the horizontal
 and vertical directions, but you need not draw double lines in your responses.</p>
 
-<p><img src="morea/data/6.hash-tables/starting-skip-list.jpg" alt=""></p>
+<p><img src="/morea/data/6.hash-tables/starting-skip-list.jpg" alt=""></p>
 
 <p><strong>(2)</strong> _Trace the path that <code>SkipSearch(36)</code> takes, by circling every node that p is assigned to as the <code>SkipSearch</code> algorithm executes, starting with s. _</p>
 
@@ -123,7 +123,7 @@ discussed! _</p>
 
 <p><strong>(8)</strong> <em>Show the table that results when 20, 51, 10, 19, 32, 1, 66, 40 are cumulatively inserted into an initially empty hash table of size 11 with <strong>chaining</strong> and **</em>h<em>(</em>k<em>) = _k</em> mod 11.**_ <em>Draw this one with a vertical table indexed from 0 to 10, and linked lists going off to the right, as shown.</em></p>
 
-<p><img src="morea/data/6.hash-tables/hash-chaining-template.jpg" alt=""></p>
+<p><img src="/morea/data/6.hash-tables/hash-chaining-template.jpg" alt=""></p>
 
 <h3>Open Addressing with Linear Probing</h3>
 
@@ -137,7 +137,7 @@ h(k,i) = (h&#39;(k) + i) mod 11</p>
 <p><em>Draw this and the next result as horizontal arrays indexed from 0 to 10 as
 shown below. Show your work to justify your answer to the next question!</em></p>
 
-<p><img src="morea/data/6.hash-tables/hash-open-template.jpg" alt=""></p>
+<p><img src="/morea/data/6.hash-tables/hash-open-template.jpg" alt=""></p>
 
 <p><strong>(10)</strong> <em>How many re-hashes after collision are required for this set of keys?</em> _ Show your work here so we can give partial credit or feedback if warranted._</p>
 
@@ -154,7 +154,7 @@ shown below. Show your work to justify your answer to the next question!</em></p
 <p><em>Refer to the code in the book for how i is incremented. Show your work to
 justify your answer to the next question!</em></p>
 
-<p><img src="morea/data/6.hash-tables/hash-open-template.jpg" alt=""></p>
+<p><img src="/morea/data/6.hash-tables/hash-open-template.jpg" alt=""></p>
 
 <p><strong>(12)</strong> <em>How many re-hashes after collision are required for this set of keys?</em> <em>Show your work here so we can give partial credit or feedback if warranted.</em></p>
 
@@ -173,7 +173,7 @@ suthers@hawaii.edu</p>
 
     
     <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a><br>
-       Last update on: <span>2014-03-18 14:32:58 -1000</span></p>
+       Last update on: <span>2014-03-18 14:43:55 -1000</span></p>
   </div>
 </footer>
 </div>
