--- a/morea/data/1.introduction/reading-algorithms.html
+++ b/morea/data/1.introduction/reading-algorithms.html
@@ -277,7 +277,7 @@ of the minimum complexity of <em>any</em> algorithm that solves the problem, and
 proofs of equivalences between problems (translating one into another). Here
 is a graphic:</p>
 
-<p><img src="/morea/data/1.introduction/Complexity-Hierarchy.jpg" alt=""></p>
+<p><img src="Complexity-Hierarchy.jpg" alt=""></p>
 
 <p>(Although algorithms can be ranked by this hierarchy, the above figure refers
 to problem classes, not algorithms.)</p>
@@ -432,7 +432,7 @@ suthers@hawaii.edu</p>
 
     
     <p style="margin: 0">Powered by the <a style="color: white" href="http://morea-framework.github.io/">Morea Framework</a><br>
-       Last update on: <span>2014-03-19 06:59:30 -1000</span></p>
+       Last update on: <span>2014-03-19 07:06:27 -1000</span></p>
   </div>
 </footer>
 </div>
